--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "better-sqlite3": "^9.4.3",
+    "dotenv": "^16.4.5",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/node": "^20.12.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -30,7 +35,9 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^5.1.6",
+    "prisma": "^5.11.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
