--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "target": "ES2022",
     "strict": true,
     "allowJs": true,
+    "checkJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
