--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/better-sqlite3": "^7.6.9",
     "@types/node": "^20.12.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
