--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "@types/invariant": "^2.2.37",
     "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.5",
     "isbot": "^4.1.0",
